correction API doc and routes
