# spec/openapi.yaml
@@ -56,7 +56,7 @@ paths:
       tags:
         - users
       security:
-        - bearerAuth: [user, creator, moderator, admin]
+        - bearerAuth: [admin]
       responses:
         '200':
           description: List users
@@ -111,6 +111,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UriginError"
+        '409':
+          description: user already exist
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UriginError"
         '500':
           description: error in the server side
           content:
@@ -130,35 +136,19 @@ paths:
           description: Numeric ID of the user to get
       tags:
         - users
-      security:
-        - bearerAuth: [user, creator, moderator, admin]
       responses:
         '200':
           description: a user
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/User"
-        '401':
-          description: Not authenticated
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UriginError"
-        '403':
-          description: Forbidden, you don't have enough rights
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UriginError"
-        '404':
-          description: user not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/UriginError"
-        '498':
-          description: Your token is invalid or expired
+                properties:
+                  id:
+                    type: integer
+                  username:
+                    type: string
+        '500':
+          description: internal server error
           content:
             application/json:
               schema:
@@ -763,11 +753,19 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UriginError"
+  /games/{gameId}:
     put:
       summary: update a game
       operationId: update a game
       tags:
         - games
+      parameters:
+        - in: path
+          name: gameId
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the game to get
       security:
         - bearerAuth: [creator, admin]
       requestBody:
@@ -806,7 +804,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UriginError"
-  /games/{gameId}:
     delete:
       summary: delete a game
       operationId: delete a game
