# src/routes/common.ts
@@ -1,5 +1,6 @@
 import {Security} from "../security/security";
 import {UriginError} from "../common/UriginError";
+import {UniqueConstraintError} from "sequelize";
 
 export function get(models, attributes) {
     return function (request, response) {
@@ -19,62 +20,73 @@ export function get(models, attributes) {
         })
     }
 }
-export function getByPk(pkItem,models,attributes){
+
+export function getByPk(pkItem, models, attributes) {
     return function (request, response) {
-        models.findByPk(request.param[pkItem]).then(function (objects) {
-            let result = [];
-
-            for (let obj of objects) {
-                let res = new Object();
-                for (let attribute of attributes) {
-                    res[attribute] = obj[attribute];
-                }
-
-                result.push(res);
+        models.findByPk(request.params[pkItem]).then(function (obj) {
+            if (obj == null){
+                response.status(404).json({description: UriginError.OBJECT_NOT_FOUND});
+                return;
             }
-
-            response.json(result);
+            let res = new Object();
+            for (let attribute of attributes) {
+                res[attribute] = obj[attribute];
+            }
+            response.json(res);
+            return;
+        }).catch(err => {
+            response.status(500).json({description: UriginError.ERROR_WITH_DATABASE});
         })
     }
 }
+
 export function post(models) {
     return function (request, response) {
         models.create(request.body).then(function (objects) {
-            response.json(objects);
+            if (objects == null) response.status(500).json({description: UriginError.ERROR_WITH_DATABASE});
+            response.json("OK");
+        }).catch(err => {
+            if (err instanceof UniqueConstraintError) {
+                response.status(409).json({description: UriginError.OBJECT_ALREADY_EXIST});
+            } else {
+                response.status(500).json({description: UriginError.ERROR_WITH_DATABASE});
+            }
         })
     }
 }
-export function postAssos(models,functionName,fKName){
+
+export function postAssos(models, functionName, fKName) {
     return function (request, response) {
-        models.findByPk(request.decoded.id).then(function(objects1){
-            models.findByPk(request.body[fKName]).then(function(objects){
+        models.findByPk(request.decoded.id).then(function (objects1) {
+            models.findByPk(request.body[fKName]).then(function (objects) {
                 delete request.body[fKName];
-                return objects1[functionName](objects,{through:request.body});
+                return objects1[functionName](objects, {through: request.body});
             });
         });
     }
 }
-export function put(models) {
-    return function (request, response) {
-        models.findByPk(request.params.id).then(function (objects) {
-            objects.update(request.body).then((result, rejected) => {
-                response.json(result);
-            });
-        })
-    }
-}
-export function putByPk(models,pkName){
+
+export function putByPk(models, pkName) {
     return function (request, response) {
         models.findByPk(request.params[pkName]).then(function (objects) {
+            if (objects == null){
+                response.status(404).json({description: UriginError.OBJECT_NOT_FOUND});
+                return;
+            }
             objects.update(request.body).then((result, rejected) => {
-                response.json(result);
+                response.json("OK");
             });
         })
     }
 }
+
 export function getByRelation(models, relation, attributes) {
     return function (request, response) {
         models.findByPk(request.params.id, {include: [relation]}).then(function (objects) {
+            if (objects == null){
+                response.status(404).json({description: UriginError.OBJECT_NOT_FOUND});
+                return;
+            }
             let result;
 
             if (isIterable(objects[relation["as"]])) {
@@ -107,10 +119,11 @@ function isIterable(obj) {
     }
     return typeof obj[Symbol.iterator] === 'function';
 }
+
 export function checkBody(parameters) {
     return (req, res, next) => {
-        for(let parameter of parameters){
-            if(!req.body.hasOwnProperty(parameter)){
+        for (let parameter of parameters) {
+            if (!req.body.hasOwnProperty(parameter)) {
                 return res.status(400).json({description: UriginError.PARAMETER_MANDATORY.replace("%d", parameter)});
             }
         }
@@ -119,19 +132,18 @@ export function checkBody(parameters) {
 }
 
 
-export function isAuthenticate(){
+export function isAuthenticate() {
     return (req, res, next) => {
 
         // check header or url parameters or post parameters for token
         var token = req.headers['x-access-token'] || req.headers['authorization']; // Express headers are auto converted to lowercase
-        if (token.startsWith('Bearer ')) {
-            // Remove Bearer from string
-            token = token.slice(7, token.length);
-        }
 
         // decode token
         if (token) {
-
+            if (token.startsWith('Bearer ')) {
+                // Remove Bearer from string
+                token = token.slice(7, token.length);
+            }
             // verifies secret and checks exp
             Security.verifyToken(token, function (err, decoded) {
                 if (err) {
@@ -156,18 +168,22 @@ export function isAuthenticate(){
 
 export function checkRole(...roles) {
     return (req, res, next) => {
-        if(roles.includes(req.decoded.role)){
+        if (roles.includes(req.decoded.role)) {
             next();
-        }  else {
+        } else {
             return res.status(403).json({description: UriginError.FORBIDDEN});
         }
     }
 }
 
-export function checkId(pkItem,models, relation?,callbackFail?){
-    return (req, res, next)=>{
-        if(relation){
+export function checkId(pkItem, models, relation?, callbackFail?) {
+    return (req, res, next) => {
+        if (relation) {
             models.findByPk(req.params[pkItem], {include: [relation]}).then(function (objects) {
+                if (objects == null){
+                    res.status(404).json({description: UriginError.OBJECT_NOT_FOUND});
+                    return;
+                }
                 if (objects[relation['as']]['id'] == req.decoded.id) {
                     next();
                 } else {
@@ -175,13 +191,19 @@ export function checkId(pkItem,models, relation?,callbackFail?){
                         callbackFail();
                     } else {
                         return res.status(403).send({
-                            description: 'Access denied.'
+                            description: UriginError.FORBIDDEN
                         });
                     }
                 }
+            }).catch(err => {
+                res.status(500).json({description: UriginError.ERROR_WITH_DATABASE});
             });
-        }else{
+        } else {
             models.findByPk(req.params[pkItem]).then(function (objects) {
+                if (objects == null){
+                    res.status(404).json({description: UriginError.OBJECT_NOT_FOUND});
+                    return;
+                }
                 if (objects['id'] == req.decoded.id) {
                     next();
                 } else {
@@ -189,10 +211,12 @@ export function checkId(pkItem,models, relation?,callbackFail?){
                         callbackFail();
                     } else {
                         return res.status(403).send({
-                            description: 'Access denied.'
+                            description: UriginError.FORBIDDEN
                         });
                     }
                 }
+            }).catch(err => {
+                res.status(500).json({description: UriginError.ERROR_WITH_DATABASE});
             });
         }
     }
